# libsmfm-core

./: .gitignore  .travis.yml  Makefile.am  autogen.sh  configure.ac  libsmfm-changelog-next.md  libsmfm-core.pc.in  libsmfm-gtk.pc.in  libsmfm-gtk3.pc.in  libsmfm.pc.in  run_cppcheck
data/: Makefile.am  libsmfm-pref-apps.desktop.in
data/ui/: Makefile.am
docs/reference/: Makefile.am
docs/reference/libsmfm-core/: Makefile.am  libsmfm-core-docs.xml  libsmfm-core-sections.txt
src/: Makefile.am  fm.c  fm.h.in
src/actions/: Makefile.am
src/base/: fm-app-info.c  fm-config.c  fm-config.h  fm-dummy-monitor.c  fm-file-info-deferred-load-worker.c  fm-file-info-deferred-load-worker.h  fm-file-info-list.c  fm-file-info-list.h  fm-file-info.c  fm-file-info.h  fm-file-launcher.c  fm-file.c  fm-folder.c  fm-folder.h  fm-highlighter.c  fm-highlighter.h  fm-icon.c  fm-list.c  fm-list.h  fm-mime-type.c  fm-nav-history.c  fm-nav-history.h  fm-path-list.c  fm-path-list.h  fm-path.c  fm-path.h  fm-symbol.c  fm-symbol.h  fm-templates.c  fm-terminal.c  fm-thumbnail-loader.c  fm-thumbnail-loader.h  fm-thumbnailer.c  fm-utils.c  fm-utils.h
src/basekit/: fm-list.c  fm-list.h  fm-symbol.c
src/extra/: fm-archiver.c  fm-bookmarks.c  fm-nav-history.c  fm-templates.c
src/gtk/: fm-cell-renderer-text.c  fm-file-properties.c  fm-folder-model.c  fm-folder-model.h  fm-folder-view.c  fm-folder-view.h  fm-gtk-file-launcher.c  fm-places-model.c  fm-standard-view.c
src/gtk/exo/: exo-icon-view.c
src/job/: fm-deep-count-job.c  fm-deep-count-job.h  fm-dir-list-job.c  fm-file-info-job.c  fm-file-info-job.h  fm-file-ops-job-delete.c  fm-file-ops-job-xfer.c  fm-file-ops-job.c  fm-file-ops-job.h  fm-job.c  fm-job.h  fm-simple-job.c
src/tests/: Makefile.am
src/vfs/: fm-vfs-menu.c  fm-vfs-menu.h  fm-vfs-search.c  fm-vfs-search.h
