NULL=


mimedir = $(datadir)/mime/packages
mime_DATA = libsmfm.xml

libsmfmconfdir = $(sysconfdir)/xdg/libsmfm
libsmfmconf_DATA = \
	libsmfm.conf \
	pref-apps.conf \
	$(NULL)

libsmfmdatafilesdir = $(datadir)/libsmfm
libsmfmdatafiles_DATA = \
	archivers.list \
	terminals.list \
	$(NULL)

EXTRA_DIST= \
	$(libsmfmconf_DATA) \
	$(mime_DATA) \
	$(libsmfmdatafiles_DATA) \
	$(NULL)

